[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/FX/Particle.gd" type="Script" id=1]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -0.173128, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 6.52
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 57.55
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 20.87
scale = 2.0
scale_curve = SubResource( 2 )

[node name="DeathParticle" type="Particles2D"]
amount = 100
lifetime = 0.5
process_material = SubResource( 3 )
script = ExtResource( 1 )
duration = 0.075

[node name="EmitterTimer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Light2D" type="Light2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="timeout" from="EmitterTimer" to="." method="_on_EmitterTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
